2016-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  Fix handling of 16-bit and 17-bit jumps in simulator.
	* src/stm8/peep.c:
	  Improve handling of 24-bit jumps in peephole optimizer.
	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Code generation for large memory model for stm8 (RFE #556).

2016-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  src/stm8/peeph.def:
	  Implement RFE #557.
	* device/lib/stm8/strcmp.s,
	  device/lib/stm8/strcpy.s:
	  Faster string functions from patch #281 by Benedikt Freisen.
	* support/regression/tests/memory.c:
	  Test memory functions on larger arrays.
	* device/lib/stm8/memcpy.s:
	  Faster string function based on patch #281 by Benedikt Freisen.

2016-02-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2715.c:
	  Fix bug #2715.
	* doc/sdccman.lyx:
	  Document treedec location.

2016-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Version 3.7.0

2017-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update for default build of lib for huge mcs51 memory model.

2017-02-06 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fixed a typo.

2017-02-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/sdbinutils/bfd/doc/Makefile.am,
	  support/sdbinutils/bfd/doc/Makefile.in:
	  Fix bug #2711.

2017-01-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/lib/strtol.c,
	  device/lib/strtoul.c,
	  support/regression/tests/strto.c,
	  device/include/stdlib.h,
	  device/lib/incl.mk:
	  Implement strtoul(), strtol() RFE #555.

2017-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Reduce memory usage in the peephole optimizer.
	  
2017-01-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/stdlib.h,
	  device/lib/incl.mk,
	  device/lib/qsort.c,
	  support/regression/tests/qsort.c: